# w24ok-bot

./: README.md
bot/: Bot.py  Dockerfile  SQLHandler.py  pyproject.toml
database/: Dockerfile  initdb.sh
parser/: Dockerfile  Parser.py  ParserV2.py  SQLHandler.py  pyproject.toml
